@@ -3,6 +3,7 @@
 - P4A_Button::setTooltip() and getTooltip() methods were added
 - afterupload event typo was fixed
 - P4A_Thumbnail_Generator::renderToFile() method was added
+- P4A_Mask::getSource() method was added
 
 3.2.1
 - Zend Framework was updated to 1.7.4
